<resources>
    <string name="app_name">Delta</string>
    <string name="description">Beskrivelse</string>
    <string name="participation">Deltakelse</string>
    <string name="start_mission">Start oppdrag</string>
    <string name="post_suggestion">Post forslag</string>
    <string name="discuss_suggestions">Diskuter forslag</string>
    <string name="done">Ferdig</string>
    <string name="Comments">Kommentarer</string>
    <string name="calculating_distance">Beregner distanse...</string>
    <string name="your_response">Din tilbakemelding</string>
    <string name="title">Tittel</string>
    <string name="add_picture">Legg til bilde</string>
    <string name="write_comment">Skriv kommentar</string>
    <string name="your_comment">Din kommentar</string>
    <string name="username">Brukernavn</string>
    <string name="password">Passord</string>
    <string name="log_in">Logg inn</string>
    <string name="register">Registrer</string>
    <string name="repeat_password">Gjenta passord</string>
    <string name="register_code">Registreringskode</string>
    <string name="loading_mission">Henter oppdrag...</string>
    <string name="your_suggestion">Ditt forslag</string>
    <string name="posting_suggestion">Poster forslag...</string>
    <string name="show_list">Vis liste</string>
    <string name="read_more">Les mer</string>
    <string name="missions">oppdrag</string>
    <string name="suggestions">forslag</string>
    <string name="comments">kommentarer</string>
</resources>
