<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white">

    <include layout="@layout/toolbar"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/project_image"
                android:layout_height="150dp"
                android:layout_width="fill_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <!--<TextView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/description"-->
                <!--android:textStyle="bold"-->
                <!--android:paddingTop="10dp"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:paddingStart="15dp"-->
                <!--android:paddingEnd="15dp"-->
                <!--android:background="@color/list_divider"/>-->

            <TextView
                android:id="@+id/project_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/participation"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@color/list_divider"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <Space
                    android:layout_weight="0.15"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <TextView
                    android:id="@+id/start_mission_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/start_mission"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/explore"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/post_suggestion_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/post_suggestion"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/lightbulb"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/browse_suggestions_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/discuss_suggestions"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/forum"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"/>

                <Space
                    android:layout_weight="0.15"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>