<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!--<include layout="@layout/toolbar"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/app_icon_big"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:text="@string/log_in"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:clickable="true"
                android:textSize="13sp"
                android:text="Er du ikke en "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:clickable="true"
                android:textSize="13sp"
                android:textColor="@color/teal_400"
                android:textStyle="bold"
                android:text="Deltaker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:clickable="true"
                android:textSize="13sp"
                android:text="\?"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToRegister"
            android:clickable="true"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:text="Trykk her for å registrere deg."/>

    </LinearLayout>

</LinearLayout>